# chocolate-factory

./: .env.example  .env.tailscale  .env.tailscale.example  .gitignore  AEMET_HISTORICAL_LIMITATION.md  CLAUDE.md  README.md  SPRINT_05_INTEGRATION_COMPLETE.md  current_flows.json  data_verification.sh  dev.sh  docker-compose.dev.yml  docker-compose.dev.yml.old  docker-compose.override.yml  docker-compose.yml  monitor_influxdb.sh  nginx-dashboard-ssl.conf  secrets.enc.yaml  test_etl_simple.py  test_mlflow_simple.py
src/fastapi-app/: coverage.json  dependencies.py  main.py  main.py.backup  pyproject.toml  pytest.ini  startup_tasks.py  test_architecture.py  test_foundation.py  test_infrastructure.py
src/fastapi-app/core/: config.py  exceptions.py  logging_config.py
src/fastapi-app/dashboard/: __init__.py  components.py  main.py  reflex_config.py  run_dashboard.py  state.py
src/fastapi-app/infrastructure/: __init__.py
src/fastapi-app/services/: __init__.py  aemet_client.py  aemet_service.py  analysis_domain_compat.py  backfill_service.py  business_logic_service.py  chatbot_context_service.py  chatbot_service.py  dashboard.py  data_ingestion.py  datosclima_etl.py  direct_ml.py  direct_ml.py.backup_before_real_ml  enhanced_ml_service.py  enhanced_recommendations.py  feature_engineering.py  gap_detector.py  gas_generation_service.py  health_logs_service.py  historical_analytics.py  historical_data_service.py  hourly_optimizer_service.py  ml_domain_compat.py  ml_models.py  ml_models_old_mlflow.py  mlflow_client.py  openweathermap_client.py  predictive_insights_service.py  price_forecasting_service.py  ree_client.py  (+9 more)
(+329 files in other folders)
