[project]
name = "fastapi-app"
version = "0.9.0"
description = "TFM Chocolate Factory - FastAPI Brain with ML and Simulation capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Scheduling and Background Tasks
    "apscheduler>=3.10.4",
    
    # Simulation Libraries
    "simpy>=4.1.1",
    "scipy>=1.11.4",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "mlflow>=2.8.1",
    "joblib>=1.3.0",
    "prophet>=1.1.5",  # Sprint 06: Time series forecasting
    
    # Time Series Database
    "influxdb-client>=1.38.0",
    
    # HTTP Client for External APIs
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",  # Phase 2: Retry logic for external APIs

    # Chatbot BI (Sprint 11)
    "anthropic>=0.40.0",  # Claude Haiku API
    "slowapi>=0.1.9",  # Rate limiting for chatbot
    
    # Dashboard and UI
    "reflex>=0.4.0",
    
    # Configuration and Environment
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Logging and Monitoring
    "loguru>=0.7.2",
    "psutil>=5.9.0",  # Sprint 05: System monitoring
    
    # Data Validation and Processing
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.0",
    
    # Development and Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "httpx>=0.25.0",
]
